<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dimpossitorus.madlib.SubmitActivity">

    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/instruction"
        android:textSize="10pt"/>

    <TextView
        android:id="@+id/remainInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:text="@string/remain" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_height="72dp"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/submitButton">

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="left"
                android:hint="@string/hint"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/submitButton"
                android:paddingTop="36dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:text="@string/ok"
            android:layout_alignBottom="@+id/inputLayout"
            android:layout_alignParentEnd="true"
            android:background="@drawable/shape"
            android:textColor="#FFFFFF"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/wordType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/type"
        />



    <Button
        android:id="@+id/nextStory"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:text="@string/nextstory"
        android:background="@drawable/shape"
        android:clickable="false"
        android:textColor="#FFFFFF"/>



</LinearLayout>