<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogtitle"
        android:layout_marginBottom="25dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:text="@string/no"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_flat"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/yes" />

        <Button
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:text="@string/yes"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/btn_flat"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>